Watchlist endpoints, small bug fixes

--- a/backend/test.html
+++ b/backend/test.html
@@ -4,7 +4,7 @@
 	enctype="multipart/form-data"
 >
 	<label>Series Name</label>
-	<input type="text" name="series_name" />
+	<input type="text" name="series_title" />
 	<label>Genre</label>
 	<input type="text" name="genre" />
 	<br />
