video streaming working

--- a/backend/test.html
+++ b/backend/test.html
@@ -1,4 +1,4 @@
-<form
+<!-- <form
 	action="http://127.0.0.1:5000/api/series"
 	method="POST"
 	enctype="multipart/form-data"
@@ -62,4 +62,7 @@
 		<textarea name="episode_desc"></textarea>
 	</div>
 	<button type="submit">Upload</button>
-</form>
+</form> -->
+<video width="320" height="240" controls>
+	<source src="http://localhost:5000/api/videos/656623c900a0869bc3cda3b2" type="video/mp4">
+  </video> 
