--- a/backend/test.html
+++ b/backend/test.html
@@ -63,6 +63,33 @@
 	</div>
 	<button type="submit">Upload</button>
 </form> -->
-<video width="320" height="240" controls>
-	<source src="http://localhost:5000/api/videos/656623c900a0869bc3cda3b2" type="video/mp4">
-  </video> 
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Socket Thing1</title>
+	</head>
+	<body>
+		Client1
+		<button onclick="sendMessage()">Send Msg</button>
+	</body>
+	<script>
+		// Create WebSocket connection.
+		const socket = new WebSocket("ws://localhost:5000");
+
+		// Connection opened
+		socket.addEventListener("open", function (event) {
+			console.log("Connected to WS Server");
+		});
+
+		// Listen for messages
+		socket.addEventListener("message", function (event) {
+			console.log("Message from server ", event.data);
+		});
+
+		const sendMessage = () => {
+			socket.send("Hello From Client1!");
+		};
+	</script>
+</html>
