fixed path for rooms

--- a/backend/test.html
+++ b/backend/test.html
@@ -82,7 +82,7 @@
 		// Create WebSocket connection.
 		const HEARTBEAT_TIMEOUT = 1000 * 5 + 1000 * 1; // 5 + 1 second
 		const HEARTBEAT_VALUE = 1;
-		const ws = new WebSocket("ws://localhost:5000/rooms/123");
+		const ws = new WebSocket("ws://localhost:5000/api/rooms/1235678");
 		const video = document.querySelector("video");
 
 		function closeConnection() {
