--- a/backend/test2.html
+++ b/backend/test2.html
@@ -82,9 +82,7 @@
 		// Create WebSocket connection.
 		const HEARTBEAT_TIMEOUT = 1000 * 5 + 1000 * 1; // 5 + 1 second
 		const HEARTBEAT_VALUE = 1;
-		const ws = new WebSocket(
-			"ws://localhost:5000/api/rooms/1235678?videoId=askasjdhfskldjfhklsdjfh"
-		);
+		const ws = new WebSocket("ws://localhost:5000/api/rooms/1235678");
 		const video = document.querySelector("video");
 		function closeConnection() {
 			if (!!ws) {
@@ -134,7 +132,6 @@
 		ws.addEventListener("message", function (event) {
 			// let data = JSON.stringify(event.data);
 			console.log(typeof event.data);
-			console.log(event.data);
 			if ("string" != typeof event.data) {
 				console.log(heartbeat);
 				heartbeat();
@@ -159,6 +156,8 @@
 					video.play();
 				}
 			}
+
+			console.log(event.data);
 		});
 
 		const sendMessage = () => {
